[package]
name = "rust-chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
rand = "0.8.5"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
actix-cors = "0.6.4"
postgres = "0.19.5"
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
jsonwebtoken = "8.3.0"
actix-web-httpauth = "0.8.0"
derive_more = "0.99.17"
rust-s3 = "0.33.0"
local-ip-address = "0.5.3"